k8s/volumn-dictionary.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    name: pod-volume
spec:
  containers:
  - image: nginx 
    name: test-container
    volumeMounts:
    - mountPath: /test-pod
      name: test-volume
  volumes:
  - name: test-volume
    hostPath:
      path: /data
      type: Directory
