k8s/volumn-fileOrCreate.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    name: pod-volume
spec:
  containers:
  - image: nginx 
    name: test-container
    volumeMounts:
    - mountPath: /test-pod/test
      name: test-volume
    - mountPath: /aaaa/test
      name: aaaa
  volumes:
  - name: test-volume
    hostPath:
      path: /data/aaa
      type: DirectoryOrCreate
  - name: aaaa
    hostPath:
      path: /data/aaa/create.txt
      type: FileOrCreate
