k8s/mysql.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mysql-service
spec:
  type: NodePort
  ports:
  - port: 3306
    nodePort: 30036
    targetPort: 3306
  selector: 
    app: mysql-pod

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: mysql-pod
  template:
    metadata: 
      labels: 
        app: mysql-pod
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-volumn
        - mountPath: /etc/mysql/conf.d
          name: mysql-config-volume
      volumes:
      - name: mysql-volumn
        hostPath:
          path: /mysql
          type: DirectoryOrCreate
      - name: mysql-config-volume
        hostPath:
          path: /mysql-config
          type: DirectoryOrCreate
