k8s/spring-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-mysql-demo
spec:
  type: NodePort
  ports:
  - targetPort: 8080
    port: 80
  selector:
    app: spring-demo-mysql-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-demo-mysql-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: spring-demo-mysql-pod
  template:
    metadata:
      labels: 
        app: spring-demo-mysql-pod
    spec:
      containers:
      - name: spring-demo-mysql
        image: qulianqing/springdemo:2.0
        ports:
        - containerPort: 8080
