k8s/spring.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-demo
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: spring-demo-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-demo-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: spring-demo-pod
  template:
    metadata:
      labels: 
        app: spring-demo-pod
    spec:
      containers:
      - name: spring-demp-d
        image: qulianqing/springdemo:1.0
        ports:
        - containerPort: 8080
